--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -49,25 +49,26 @@
     <div class="container">
         <main class="login">
             <section class="login-box">
+
                 <h1 class="login-texto">Login</h1>
                 <div class="campo-login">
-                    <form method="post" class="formLogin">
+                    <form method="post" class="formLogin" action="/login">
                         <div class="campo">
                             <fieldset>
                                 <legend class="campo-legenda"><strong>Gostaria de entrar como:</strong></legend>
-                                <label>
-                                    <input id="usuario" th:value="${usuario}" type="radio" name="devweb"
-                                           value="frontend"
-                                           checked>Usuário
-                                </label>
-                                <label>
-                                    <input id="tecnico" th:value="${tecnico}" type="radio" name="devweb"
-                                           value="backend">Técnico
-                                </label>
-                                <label>
-                                    <input id="administrador" th:value="${administrador}" type="radio" name="devweb"
-                                           value="backend">Administrador
-                                </label>
+                                <ul>
+                                    <li th:each="option : ${radioOptions}">
+                                    <label>
+                                        <input id="usuario" type="radio" name="person" value="frontend" th:value="${option}" th:checked="${option == 'Usuário'}" />Usuário
+                                    </label>
+                                    <label>
+                                        <input id="tecnico"   type="radio" name="person" value="backend" th:value="${option}" th:checked="${option == 'Técnico'}" />Técnico
+                                    </label>
+                                    <label>
+                                        <input id="administrador"  type="radio" name="person" value="backend" th:value="${option}" th:checked="${option == 'Administrador'}" />Administrador
+                                    </label>
+                                    </li>
+                                </ul>
                             </fieldset>
                         </div>
 
@@ -79,8 +80,8 @@
 
                         <div>
                             <label for="password">Senha</label> <!-- Rótulo do campo senha -->
-                            <input type="password" id="password" th:value="${password}" class="input-senha"
-                                   name="password"
+                            <input type="password" id="password" th:value="${senha}" class="input-senha"
+                                   name="senha"
                                    placeholder="Digite sua senha:"/>
 
                         </div>
@@ -88,25 +89,31 @@
                             <div class="lembrar">
                                 <input type="checkbox" id="lembrar">
                                 <label for="lembrar">Lembrar-me</label>
+
                             </div>
                             <div class="esqueceu">
                                 <a href="#">Esqueceu a senha</a>
                             </div>
                         </div>
 
+
+
                         <div class="container-input-login">
-                            <a href="controller">
+                            <div th:if="${erro != null}" th:text="${erro}"  class="alert alert-danger" style="color: white;"></div>
+
+                            <a href="#" >
+                                <input class="input" type="submit"  />
                                 <span></span>
                                 <span></span>
                                 <span></span>
                                 <span></span>
                                 Entrar
-                            </a>
+                                </a>
                         </div>
 
                         <div class="registrar">
                             <p>Ainda não tem uma conta?
-                                <a href="cadastro.html">Registrar</a>
+                                <a href="/cadastro">Registrar</a>
                             </p>
                         </div>
                     </form>
