--- a/src/main/resources/templates/usuario.novo.chamado.html
+++ b/src/main/resources/templates/usuario.novo.chamado.html
@@ -131,13 +131,13 @@
                             </select>
                         </div>
                         <div class="container-input-cadastrar">
-                            <a href="#">
+                            <button href="#">
                                 <span></span>
                                 <span></span>
                                 <span></span>
                                 <span></span>
                                 Cadastrar
-                            </a>
+                            </button>
                         </div>
                     </form>
 
