--- a/src/main/resources/templates/usuario.novo.chamado.html
+++ b/src/main/resources/templates/usuario.novo.chamado.html
@@ -131,13 +131,7 @@
                             </select>
                         </div>
                         <div class="container-input-cadastrar">
-                            <a href="#">
-                                <span></span>
-                                <span></span>
-                                <span></span>
-                                <span></span>
-                                Cadastrar
-                            </a>
+                            <button type="submit">Cadastrar</button>
                         </div>
                     </form>
 
