--- a/src/main/resources/templates/usuario.chamados.html
+++ b/src/main/resources/templates/usuario.chamados.html
@@ -66,6 +66,9 @@
                             <td th:text="${chamado.id_prioridade.nome}">Prioridade</td>
                             <td th:text="${chamado.descricao}">Descrição</td>
                             <td th:text="${chamado.dt_fim}">Data Fim</td>
+
+                            <td><a th:href="@{/usuario/chamado/{id}(id=${chamado.id})}">Detalhes</a></td>
+
                         </tr>
 
                         </tbody>
