--- a/src/main/resources/templates/usuario.novo.chamado.html
+++ b/src/main/resources/templates/usuario.novo.chamado.html
@@ -35,7 +35,7 @@
         <h1>Portal Tech</h1>
     </div>
     <nav class="cabecalhoMenu">
-        <a href="index.html">
+        <a href="/static/index.html">
             <span></span>
             <span></span>
             <span></span>
