--- a/src/main/resources/templates/usuario.admin.html
+++ b/src/main/resources/templates/usuario.admin.html
@@ -48,7 +48,7 @@
     <div class="container">
         <main class="container-form">
             <section class="container-box">
-                <h1 class="container-texto" th:text="'Bem-vindo, ' + ${userName} + '!'">Bem-vindo(a)!</h1>
+                <h1 class="container-texto" gth:text="'Bem-vindo, ' + ${userName} + '!'">Bem-vindo(a)!</h1>
                 <h2 class="container-subtitulo">Painel de Chamados</h2>
                 <div class="tabela-container">
                     <table class="tabela">
