chamados tecnico - controller MVC

--- a/src/main/resources/templates/index.tecnico.html
+++ b/src/main/resources/templates/index.tecnico.html
@@ -29,13 +29,15 @@
         <h1>Portal Tech</h1>
     </div>
     <nav class="cabecalhoMenu">
-        <a href="index.html">
+        <!--<a href="/index.html">-->
+        <a href="/">
             <span></span>
             <span></span>
             <span></span>
             <span></span>
             HOME
         </a>
+    </nav>
 </header>
 
 <section class="home">
@@ -79,7 +81,8 @@
                     </table>
                 </div>
                 <div class="return-index" style="margin-top: 250px;">
-                    <p><a href="/index/usuario"><img class="color-image" src="/styles/images/voltar.png" /></a>Voltar para tela inicial</p>
+                    <!--index/usuario-->
+                    <p><a href="/"><img class="color-image" src="/styles/images/voltar.png" /></a>Voltar para tela inicial</p>
                 </div>
             </section>
         </main>
