--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -85,7 +85,7 @@
 
                         <div>
                             <label for="password">Senha</label> <!-- Rótulo do campo senha -->
-                            <input type="password" id="password" th:value="${password}" class="input-senha"
+                            <input type="password" id="password" th:value="${senha}" class="input-senha"
                                    name="senha"
                                    placeholder="Digite sua senha:"/>
 
