--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -107,7 +107,7 @@
 
                         <div class="registrar">
                             <p>Ainda não tem uma conta?
-                                <a href="cadastro.html">Registrar</a>
+                                <a href="/cadastro">Registrar</a>
                             </p>
                         </div>
                     </form>
