--- a/src/main/resources/templates/cadastro.html
+++ b/src/main/resources/templates/cadastro.html
@@ -170,7 +170,7 @@
                     <div class="login">
                         <p>
                             Já tem uma conta?
-                            <a href="login.html">Login</a>
+                            <a href="/login">Login</a>
                         </p>
                     </div>
                 </form>
