--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -31,7 +31,7 @@
         <h1>Portal Tech</h1>
     </div>
     <nav class="cabecalhoMenu">
-        <a href="index.html">
+        <a href="/">
             <span></span>
             <span></span>
             <span></span>
@@ -105,7 +105,7 @@
 
                         <div class="registrar">
                             <p>Ainda não tem uma conta?
-                                <a href="cadastro.html">Registrar</a>
+                                <a href="/cadastro">Registrar</a>
                             </p>
                         </div>
                     </form>
