--- a/src/main/resources/templates/usuario.novo.chamado.html
+++ b/src/main/resources/templates/usuario.novo.chamado.html
@@ -35,7 +35,7 @@
         <h1>Portal Tech</h1>
     </div>
     <nav class="cabecalhoMenu">
-        <a href="/static/index.html">
+        <a href="/">
             <span></span>
             <span></span>
             <span></span>
@@ -110,12 +110,10 @@
                             </div>
                             <select class="form-control" id="setor" name="setor">
                                 <option value="" disabled selected>Escolha o Setor</option>
-                                <option value="Financeiro">Financeiro</option>
-                                <option value="Comercial">Comercial</option>
-                                <option value="Jurídico">Jurídico</option>
-                                <option value="Administrativo">Administrativo</option>
-                                <option value="Suporte Técnico">Suporte Técnico</option>
-                                <option value="Suporte Técnico">Recursos Humanos</option>
+                                <option value="Administrativo">Financeiro</option>
+                                <option value="Marketing">Financeiro</option>
+                                <option value="Recursos Humanos">Administrativo</option>
+                                <option value="Suporte">Suporte</option>
                             </select>
                         </div>
                         <div class="">
@@ -139,7 +137,7 @@
 
                     <div class="return-index">
                         <p>
-                            <a href="/index/usuario"
+                            <a href="/tela-usuario"
                             ><img
                                     class="color-image"
                                     src="/styles/images/voltar.png" /></a
