--- a/src/main/resources/static/styles/usuario.chamado.css
+++ b/src/main/resources/static/styles/usuario.chamado.css
@@ -336,6 +336,7 @@ font-family: "Orbitron", sans-serif;
   padding: 12px;
   text-align: left;
   background-color: var(--segunda-cor);
+  color: var(--black-cor);
 }
 
 .tabela th {
@@ -379,18 +380,39 @@ font-family: "Orbitron", sans-serif;
   width: 12%;
 }
 
-.footer {
-  font-family: "Orbitron", sans-serif;
-  background: radial-gradient(
-    100% 100% at bottom center,
-    rgb(145, 32, 138),
-    rgb(11, 22, 40)
-  );
-  padding: 0.5rem;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
+
+.botao-salvar{
+  color: #03e9f4;
+  font-size: 14px;
+  text-decoration: none;
+  text-transform: uppercase;
+  overflow: hidden;
+  transition: 0.5s;
+  border:none;
+  background: none;
+  cursor:pointer;
 }
+
+.botao-salvar:hover{
+ background: #03e9f4;
+  color: #f1eee6;
+  box-shadow: 0 0 10px #03e9f4, 0 0 50px #03e9f4, 0 0 100px #03e9f4,
+    0 0 200px #03e9f4;
+    }
+
+    .footer {
+      font-family: "Orbitron", sans-serif;
+      background: radial-gradient(
+        100% 100% at bottom center,
+        rgb(145, 32, 138),
+        rgb(11, 22, 40)
+      );
+      padding: 0.5rem;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+    }
+
 
 .footer-content {
   display: flex;
