--- a/src/main/resources/templates/cadastro.html
+++ b/src/main/resources/templates/cadastro.html
@@ -22,23 +22,23 @@
     />
 
     <title>Portal Tech</title>
-    <link rel="icon" href="/static/styles/images/logo.jpeg"/>
+    <link rel="icon" href="/styles/images/logo.jpeg"/>
 </head>
 <body>
 <header class="cabecalho">
     <div class="logo">
-        <img src="/static/styles/images/logo.jpeg" alt="logo Portal Tech"/>
+        <img src="/styles/images/logo.jpeg" alt="logo Portal Tech"/>
     </div>
     <div class="titulo">
         <h1>Portal Tech</h1>
     </div>
     <nav class="cabecalhoMenu">
-        <a href="index.html">
+        <a href="/">
             <span></span>
             <span></span>
             <span></span>
             <span></span>
-            Entrar
+            HOME
         </a>
     </nav>
 </header>
@@ -55,10 +55,11 @@
                                 Gostaria de se cadastrar como:
                             </legend>
                             <ul>
-                                <li th:each="optionTipo : ${radioTipoOptions}">
+                                <li th:each="optionTipo : ${radioTipoOptions}"></li>
+                                <li>
                                     <label>
                                         <input
-                                                th:checked="${optionTipo == 'Usuário'}"
+                                                th:checked="${optionTipo == Usuário}"
                                                 type="radio"
                                                 name="tipo"
                                                 value="Usuário"
@@ -70,7 +71,7 @@
                                 <li>
                                     <label>
                                         <input
-                                               th:checked="${optionTipo == 'Técnico'}"
+                                               th:checked="${optionTipo == Técnico}"
                                                 type="radio"
                                                 name="tipo"
                                                 value="Técnico"
@@ -82,7 +83,7 @@
                                 <li>
                                     <label>
                                         <input
-                                                th:checked="${optionTipo == 'Administrador'}"
+                                                th:checked="${optionTipo == Administrador}"
                                                 type="radio"
                                                 name="tipo"
                                                 value="Administrador"
@@ -95,17 +96,14 @@
                     </div>
 
                     <div id="setorDiv" style="display: none">
-<!--                        <ul>-->
-<!--                            <li th:each="optionSetor : ${selectSetorOptions}">-->
-                                <label for="setor">Setor:</label>
-                                <select name="setor" id="setor" class="setor" th:each="optionSetor : ${selectSetorOptions}">
-                                    <option value="Administrativo"  name="setor"  th:value="${optionSetor}" th:checked="${optionSetor == 'Administrativo' }" ></option>
+                        <label th:each="optionSetor : ${selectSetorOptions}"></label>
+                                <label for="setor" >Setor:</label>
+                                <select name="setor" id="setor" class="setor">
+                                    <option value="Administrativo"  name="setor"  th:value="${optionSetor}" th:checked="${optionSetor == 'Administrativo' }" >Administrativo</option>
                                     <option value="Marketing" name="setor" th:value="${optionSetor}" th:checked="${optionSetor == 'Marketing'}">Marketing</option>
                                     <option value="Recursos Humanos" name="setor"  th:value="${optionSetor}" th:checked="${optionSetor == 'Recursos Humanos'}">Recursos Humanos</option>
                                     <option value="Suporte" name="setor" th:value="${optionSetor}" th:checked="${optionSetor == 'Suporte'}" >Suporte</option>
                                 </select>
-<!--                            </li>-->
-<!--                        </ul>-->
                     </div>
 
                     <div>
@@ -163,7 +161,7 @@
                     <div class="login">
                         <p>
                             Já tem uma conta?
-                            <a href="login.html">Login</a>
+                            <a href="/login">Login</a>
                         </p>
                     </div>
                 </form>
@@ -178,7 +176,7 @@
         <div class="footer-content">
             <div class="github">
                 <img
-                        src="/static/styles/images/github.png"
+                        src="styles/images/github.png"
                         alt="GitHub Logo"
                         class="github-img"
                 />
@@ -201,7 +199,7 @@
        let setorDiv = document.getElementById("setorDiv");
        let inputs = document.querySelectorAll('.setor, .input-nome, .input-telefone, .input-email, .input-senha');
 
-       if (radio && radio.value === "usuario") {
+       if (radio && radio.value === "Usuário") {
            setorDiv.style.display = "block";
            inputs.forEach(input => {
                input.style.height = "30px";
