--- a/src/main/resources/templates/usuario.admin.html
+++ b/src/main/resources/templates/usuario.admin.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link rel="stylesheet" type="text/css" href="/static/styles/usuario.chamado.css" />
+    <link rel="stylesheet" type="text/css" href="/styles/usuario.chamado.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -23,18 +23,13 @@
 <body>
 <header class="cabecalho">
     <div class="logo">
-        <!-- ALTERAR CAMINHO QUANDO FAZER A ROTA -->
-        <img src="/static/styles/images/logo.jpeg" alt="logo Portal Tech" />
+        <img src="styles/images/logo.jpeg" alt="logo Portal Tech" />
     </div>
     <div class="titulo">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
         <h1>Portal Tech</h1>
     </div>
     <nav class="cabecalhoMenu">
-        <a href="index.html">
+        <a href="/">
             <span></span>
             <span></span>
             <span></span>
@@ -48,7 +43,7 @@
     <div class="container">
         <main class="container-form">
             <section class="container-box">
-                <h1 class="container-texto" gth:text="'Bem-vindo, ' + ${userName} + '!'">Bem-vindo(a)!</h1>
+                <h1 class="container-texto" th:text="'Bem-vindo, ' + ${userName} + '!'">Bem-vindo(a)!</h1>
                 <h2 class="container-subtitulo">Painel de Chamados</h2>
                 <div class="tabela-container">
                     <table class="tabela">
@@ -61,24 +56,30 @@
                             <th>Prioridade</th>
                             <th>Responsavél</th>
                             <th>Status</th>
+                            <th>Salvar</th>
                         </tr>
                         </thead>
                         <tbody>
-                        <tr>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
+                        <tr th:each="chamado : ${chamados}">
+                            <td th:text="${dtFormatada}">Data Abertura</td>
+                            <td th:text="${chamado.id_usuario.nome}">Usuario</td>
+                            <td th:text="${chamado.id_usuario.setor.nome}">Setor</td>
+                            <td th:text="${chamado.descricao}">Descrição</td>
+                            <td>
+                                <label th:each="optionPrioridade : ${selectPrioridadeOptions}"></label>
+                                <select id="prioridade" name="prioridade">
+                                    <option value="baixa" name="prioridade" th:value="${optionPrioridade}" th:checked="${optionPrioridade == 'baixa' }"> Baixa</option>
+                                    <option value="media" name="prioridade" th:value="${optionPrioridade}" th:checked="${optionPrioridade == 'media' }">Média</option>
+                                    <option value="alta" name="prioridade" th:value="${optionPrioridade}" th:checked="${optionPrioridade == 'alta' }">Alta</option>
+                                </select>
+                            </td>
+                            <td th:text="${chamado.id_tecnico.nome}">Responsável</td>
+                            <td th:text="${chamado.id_status.nome}">Status</td>
+                            <td><button type="submit" class="botao-salvar">Salvar</button> </td>
                         </tr>
                         </tbody>
                         <tbody>
                     </table>
-                </div>
-                <div class="return-index" style="margin-top: 250px;">
-                    <p><a href="index.usuario.html"><img class="color-image" src="voltar.jpeg" /></a>Voltar para tela inicial</p>
                 </div>
             </section>
         </main>
@@ -89,7 +90,7 @@
     <div class="container">
         <div class="footer-content">
             <div class="github">
-                <img src="github.jpeg" alt="GitHub Logo" class="github-img" />
+                <img src="styles/images/github.png" alt="GitHub Logo" class="github-img" />
             </div>
             <div class="github-links">
                 <a href="https://github.com/alineadcosta95">Aline Alves </a>
