--- a/src/main/resources/templates/usuario.chamados.html
+++ b/src/main/resources/templates/usuario.chamados.html
@@ -17,7 +17,7 @@
             rel="stylesheet" />
 
     <title>Portal Tech</title>
-    <link rel="icon" href="styles/images/logo.jpeg" />
+    <link rel="icon" href="/styles/images/logo.jpeg" />
 </head>
 
 <body>
@@ -29,7 +29,7 @@
         <h1>Portal Tech</h1>
     </div>
     <nav class="cabecalhoMenu">
-        <a href="index.html">
+        <a href="/">
             <span></span>
             <span></span>
             <span></span>
@@ -69,7 +69,7 @@
                             <td th:text="${chamado.descricao}">Descrição</td>
                             <td th:text="${chamado.dt_fim}">Data Fim</td>
 
-                            <td><a th:href="@{'/usuario/chamado/' + ${chamado.id}}">Detalhes</a></td>
+                            <td><a th:href="@{'/usuario/chamados/' + ${chamado.id}}">Detalhes</a></td>
 
                         </tr>
 
@@ -77,7 +77,7 @@
                     </table>
                 </div>
                 <div class="return-index" style="margin-top: 250px;">
-                    <p><a href="/index/usuario"><img class="color-image" src="/styles/images/voltar.png" /></a>Voltar para tela inicial</p>
+                    <p><a href="/tela-usuario"><img class="color-image" src="/styles/images/voltar.png" /></a>Voltar para tela inicial</p>
                 </div>
             </section>
         </main>
